fixed alignment of history on profile page and added ability to check if the user is currently in possession of a book

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -34,8 +34,7 @@ section.catalog {
 }
 
 #pagination a.active {
-  background-color: #4CAF50;
-  color: white;
+  font-weight: bold;
 }
 
 section.pages {
